Fix WebSocket pong messages were not sent correctly; Add WebSocket reconnection on tab focus; Use generic format for messages; Add box-sizing: border-box to avoid confusing behavior of elements; Add hint for new messages if user has scrolled; Avoid sending empty messages; Fix wrong height of chatbotDialog;

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,9 @@
 @import 'animate.css/animate.css';
 
+* {
+  box-sizing: border-box;
+}
+
 .animate__animated {
   &.animate__fadeInRight,
   &.animate__fadeOutRight {
